--- a/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
+++ b/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
@@ -56,7 +56,7 @@
         "EXTRA_TEXT": [" NL 将一张耗能为 %d 的 *诺言 放入抽牌堆。"]
     },
     "mojichimera:GluttonousMod": {
-        "TEXT": ["暴食", "", "首次打出时 #b随机 #y消耗 一张牌，每次打出本牌时将其一并打出。 NL 只适用于可打出的攻击或技能牌。"],
+        "TEXT": ["暴食", "", "首次打出时 #b随机 #y消耗 一张牌，每次打出本牌时将其一并打出。 NL 目标只能是可打出的攻击或技能牌。"],
         "EXTRA_TEXT": [" NL 首次打出时随机 消耗 一张牌，每次打出本牌时将其一并打出。", " NL 打出 %s 。"]
     },
     "mojichimera:HeatsinksMod": {
@@ -73,8 +73,8 @@
         "NOTES": ["hexamod:BurningQuestion"]
     },
     "mojichimera:KyrieMod": {
-        "TEXT": ["垂怜", "", "目标生命百分比越高，造成的伤害越高，最高 #b200% 。"],
-        "EXTRA_TEXT": [" NL 目标生命百分比越高，造成的伤害越高 。"]
+        "TEXT": ["垂怜", "", "目标敌人生命百分比越高，造成的伤害越高，最高 #b200% 。"],
+        "EXTRA_TEXT": [" NL 目标敌人生命百分比越高，造成的伤害越高 。"]
     },
     "mojichimera:LimitlessMod": {
         "TEXT": ["上限", "", "卡牌数值减少 #b50% 。 NL 每前进一层，卡牌数值增加基础值的 #b3% 。"],
@@ -162,8 +162,8 @@
         "EXTRA_TEXT": [" NL 丢弃手牌中所有 状态牌 ，抽等量的牌。"]
     },
     "mojichimera:BleedingMod": {
-        "TEXT": ["流血", "", "你每次受到伤害，造成的伤害增加 #b20% 。"],
-        "EXTRA_TEXT": [" NL 你每次受到伤害，造成的伤害增加 %d%% 。"]
+        "TEXT": ["流血", "", "你每在战斗中失去生命一次，造成的伤害增加 #b20% 。"],
+        "EXTRA_TEXT": [" NL 你每在战斗中失去生命一次，造成的伤害增加 %d%% 。"]
     },
     "mojichimera:BuriedMod": {
         "TEXT": ["埋藏", "", "#y墓地。 NL 卡牌数值增加 #b50% 。"],
@@ -186,7 +186,7 @@
         "EXTRA_TEXT": [" NL 结束你的回合。"]
     },
     "mojichimera:DeadOnMod": {
-        "TEXT": ["精准", "", "从手牌中间打出时，造成的伤害和获得的 #y格挡 增加 #b75% 。 NL 源于 #b崩坠 #y亡命之徒 的同名关键词。"],
+        "TEXT": ["精准", "", "从手牌中间打出时，造成的伤害和获得的 #y格挡 增加 #b75% 。 NL 源于 #b崩坠 #y亡命之徒 的同名关键词。 NL 当手牌为偶数张时，中间的两张牌都能触发效果。"],
         "EXTRA_TEXT": [" NL 从手牌中间打出时，伤害和 格挡 增加 %d%% 。"]
     },
     "mojichimera:DodgeMod": {
@@ -210,8 +210,8 @@
         "EXTRA_TEXT": [" NL 随机添加 %d 张 状态牌 到抽牌堆、弃牌堆或手牌。"]
     },
     "mojichimera:ExploitMod": {
-        "TEXT": ["", "利用", "敌人每有一层 #y易伤 ，造成的伤害增加 #b20% 。"],
-        "EXTRA_TEXT": [" NL 敌人每有一层 易伤 ，造成的伤害增加 %d%% 。"]
+        "TEXT": ["", "利用", "目标敌人每有一层 #y易伤 ，造成的伤害增加 #b20% 。"],
+        "EXTRA_TEXT": [" NL 目标敌人每有一层 易伤 ，造成的伤害增加 %d%% 。"]
     },
     "mojichimera:FireBreathingMod": {
         "TEXT": ["", "吐息", "本牌变为 #y能力 牌。 NL 每当你抽到一张 #y状态牌 或 #y诅咒 牌 时，打出原牌的复制。"],
@@ -226,8 +226,8 @@
         "EXTRA_TEXT": [" NL 获得 %d 点 临时 集中 。"]
     },
     "mojichimera:ForeDoomedMod": {
-        "TEXT": ["灾厄", "", "随机获得 #b2 张 #y诅咒 （不包括 #y凡庸 ）。 NL 手牌中每有一张 #y诅咒 ， 再打出一次 。 NL 源于 #b奇美拉 的弃用词条 #y诅咒 。"],
-        "EXTRA_TEXT": [" NL 随机获得 %d 张 诅咒 。 NL 手牌中每有一张 诅咒 ， 再打出一次 。"]
+        "TEXT": ["灾厄", "", "向手牌中添加 #b2 张 随机 #y诅咒 （不包括 #y凡庸 ）。 NL 手牌中每有一张 #y诅咒 ， 再打出一次 。 NL 源于 #b奇美拉 的弃用词条 #y诅咒 。"],
+        "EXTRA_TEXT": [" NL 向手牌中添加 %d 张随机 诅咒 。 NL 手牌中每有一张 诅咒 ， 再打出一次 。"]
     },
     "mojichimera:FuelFlameMod": {
         "TEXT": ["浇油", "", "造成的伤害和获得的 #y格挡 减少 #b20% 。 NL 如果敌人有 #y易伤 状态，获得 [E] 并且抽 #b1 张牌。"],
@@ -262,7 +262,7 @@
         "EXTRA_TEXT": []
     },
     "mojichimera:OnSaleMod": {
-        "TEXT": ["特价", "", "升级时耗能额外减少 #b1 。"],
+        "TEXT": ["史低", "", "升级时耗能额外减少 #b1 。"],
         "EXTRA_TEXT": []
     },
     "mojichimera:PainfulMod": {
@@ -310,11 +310,11 @@
         "EXTRA_TEXT": ["每当你对一名敌人造成负面状态时： NL "]
     },
     "mojichimera:SarcasticMod": {
-        "TEXT": ["讽刺", "", "敌人每有一种负面效果或你每有一种正面效果，造成的伤害增加 #b20% 。"],
-        "EXTRA_TEXT": [" NL 敌人每有一种负面效果或你每有一种正面效果，造成的伤害增加 %d%% 。"]
+        "TEXT": ["讽刺", "", "目标敌人每有一种负面效果或你每有一种正面效果，造成的伤害增加 #b20% 。"],
+        "EXTRA_TEXT": [" NL 目标敌人每有一种负面效果或你每有一种正面效果，造成的伤害增加 %d%% 。"]
     },
     "mojichimera:SteelMod": {
-        "TEXT": ["钢铁", "", "抽到本牌时，本回合打出的下 #b1 张牌数值增加 #b50% 。 NL 只适用于数值至少 #b2 点的攻击、技能或能力牌。 NL 源于 #bBalatro 的 #y钢铁牌 。"],
+        "TEXT": ["钢铁", "", "抽到本牌时，本回合打出的下 #b1 张牌数值增加 #b50% 。 NL 目标只能是数值至少 #b2 点的攻击、技能或能力牌。 NL 源于 #bBalatro 的 #y钢铁牌 。"],
         "EXTRA_TEXT": [" NL 抽到本牌时，本回合打出的下 %d 张牌数值增加 %d%% 。"]
     },
     "mojichimera:StrategyMod": {
