--- a/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
+++ b/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
@@ -285,6 +285,10 @@
             " NL 如果敌人有 虚弱 状态 ， NL 获得 [G] 并且 NL 抽1张牌。"
         ]
     },
+    "mojichimera:ProudfulMod": {
+        "TEXT": ["骄傲", "", "你每有一种正面效果，造成的伤害增加 #b20% 。"],
+        "EXTRA_TEXT": [" NL 你每有一种正面效果，造成的伤害增加 %d%% 。"]
+    },
     "mojichimera:RecyclableMod": {
         "TEXT": ["可回收", "", "#y虚无 。 NL 若被 #y消耗 ，下一回合获得 [E] 。"],
         "EXTRA_TEXT": [" 虚无 。 NL ", " NL 若被 消耗 ，下一回合获得 [E] 。"]
@@ -310,8 +314,8 @@
         "EXTRA_TEXT": ["每当你对一名敌人造成负面状态时： NL "]
     },
     "mojichimera:SarcasticMod": {
-        "TEXT": ["讽刺", "", "目标敌人每有一种负面效果或你每有一种正面效果，造成的伤害增加 #b20% 。"],
-        "EXTRA_TEXT": [" NL 目标敌人每有一种负面效果或你每有一种正面效果，造成的伤害增加 %d%% 。"]
+        "TEXT": ["讽刺", "", "目标敌人每有一种负面效果，造成的伤害增加 #b20% 。"],
+        "EXTRA_TEXT": [" NL 目标敌人每有一种负面效果，造成的伤害增加 %d%% 。"]
     },
     "mojichimera:SteelMod": {
         "TEXT": ["钢铁", "", "抽到本牌时，本回合打出的下 #b1 张牌数值增加 #b50% 。 NL 目标只能是数值至少 #b2 点的攻击、技能或能力牌。 NL 源于 #bBalatro 的 #y钢铁牌 。"],
